--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
   "name": "stackedit",
-  "version": "5.15.4",
-  "description": "Free, open-source, full-featured Markdown editor",
-  "author": "Benoit Schweblin",
+  "version": "6.0.0",
+  "description": "AI-assisted Markdown editor based on StackEdit",
+  "author": "Fladry Creative",
   "license": "Apache-2.0",
   "bugs": {
     "url": "https://github.com/benweet/stackedit/issues"
@@ -25,118 +25,116 @@
     "chart": "mkdir -p dist && rm -rf dist/stackedit && cp -r chart dist/stackedit && sed -i.bak -e s/STACKEDIT_VERSION/$npm_package_version/g dist/stackedit/*.yaml && rm dist/stackedit/*.yaml.bak"
   },
   "dependencies": {
-    "@vue/test-utils": "^1.0.0-beta.16",
-    "abcjs": "^5.2.0",
-    "aws-sdk": "^2.1380.0",
-    "babel-runtime": "^6.26.0",
-    "bezier-easing": "^1.1.0",
-    "body-parser": "^1.18.2",
-    "clipboard": "^1.7.1",
-    "compression": "^1.7.0",
-    "diff-match-patch": "^1.0.0",
-    "file-saver": "^1.3.8",
-    "google-id-token-verifier": "^0.2.3",
-    "handlebars": "^4.0.10",
-    "indexeddbshim": "^3.6.2",
-    "js-yaml": "^3.11.0",
-    "katex": "^0.13.0",
-    "markdown-it": "^8.4.1",
-    "markdown-it-abbr": "^1.0.4",
-    "markdown-it-deflist": "^2.0.2",
-    "markdown-it-emoji": "^1.3.0",
-    "markdown-it-footnote": "^3.0.1",
+    "@aws-sdk/client-s3": "^3.450.0",
+    "@vue/test-utils": "^1.3.6",
+    "abcjs": "^6.4.1",
+    "bezier-easing": "^2.1.0",
+    "body-parser": "^1.20.2",
+    "clipboard": "^2.0.11",
+    "compression": "^1.7.4",
+    "core-js": "^3.34.0",
+    "diff-match-patch": "^1.0.5",
+    "file-saver": "^2.0.5",
+    "google-auth-library": "^9.4.1",
+    "handlebars": "^4.7.8",
+    "indexeddbshim": "^10.0.0",
+    "js-yaml": "^4.1.0",
+    "katex": "^0.16.9",
+    "markdown-it": "^14.0.0",
+    "markdown-it-abbr": "^2.0.0",
+    "markdown-it-deflist": "^3.0.0",
+    "markdown-it-emoji": "^3.0.0",
+    "markdown-it-footnote": "^4.0.0",
     "markdown-it-imsize": "^2.0.1",
-    "markdown-it-mark": "^2.0.0",
-    "markdown-it-pandoc-renderer": "1.2.0",
-    "markdown-it-sub": "^1.0.0",
-    "markdown-it-sup": "^1.0.0",
-    "mermaid": "^8.9.2",
-    "mousetrap": "^1.6.1",
-    "normalize-scss": "^7.0.1",
-    "prismjs": "^1.6.0",
-    "request": "^2.85.0",
-    "serve-static": "^1.13.2",
-    "tmp": "^0.0.33",
-    "turndown": "^4.0.2",
-    "vue": "^2.5.16",
-    "vuex": "^3.0.1"
+    "markdown-it-mark": "^4.0.0",
+    "markdown-it-pandoc-renderer": "^1.2.0",
+    "markdown-it-sub": "^2.0.0",
+    "markdown-it-sup": "^2.0.0",
+    "mermaid": "^10.6.1",
+    "mousetrap": "^1.6.5",
+    "node-fetch": "^2.7.0",
+    "normalize-scss": "^8.0.0",
+    "prismjs": "^1.29.0",
+    "regenerator-runtime": "^0.14.1",
+    "serve-static": "^1.15.0",
+    "tmp": "^0.2.1",
+    "turndown": "^7.1.2",
+    "vue": "^2.7.16",
+    "vuex": "^3.6.2"
   },
   "devDependencies": {
-    "autoprefixer": "^6.7.2",
-    "babel-core": "^6.26.3",
-    "babel-eslint": "^8.2.3",
-    "babel-jest": "^21.0.2",
-    "babel-loader": "^7.1.4",
-    "babel-plugin-dynamic-import-node": "^1.2.0",
-    "babel-plugin-transform-es2015-modules-commonjs": "^6.26.2",
-    "babel-plugin-transform-runtime": "^6.23.0",
-    "babel-polyfill": "^6.23.0",
-    "babel-preset-env": "^1.7.0",
-    "babel-preset-stage-2": "^6.22.0",
-    "babel-register": "^6.22.0",
-    "chalk": "^1.1.3",
-    "connect-history-api-fallback": "^1.3.0",
-    "copy-webpack-plugin": "^4.5.1",
-    "css-loader": "^0.28.11",
-    "eslint": "^4.19.1",
-    "eslint-config-airbnb-base": "^12.1.0",
-    "eslint-friendly-formatter": "^4.0.1",
-    "eslint-import-resolver-webpack": "^0.9.0",
-    "eslint-loader": "^2.0.0",
-    "eslint-plugin-html": "^4.0.3",
-    "eslint-plugin-import": "^2.11.0",
+    "@babel/core": "^7.23.6",
+    "@babel/eslint-parser": "^7.28.5",
+    "@babel/plugin-transform-runtime": "^7.23.6",
+    "@babel/preset-env": "^7.23.6",
+    "@babel/runtime": "^7.23.6",
+    "@soda/friendly-errors-webpack-plugin": "^1.8.1",
+    "@vue/vue2-jest": "^29.2.6",
+    "autoprefixer": "^10.4.16",
+    "babel-jest": "^29.7.0",
+    "babel-loader": "^9.1.3",
+    "chalk": "^4.1.2",
+    "connect-history-api-fallback": "^2.0.0",
+    "copy-webpack-plugin": "^11.0.0",
+    "css-loader": "^6.8.1",
+    "css-minimizer-webpack-plugin": "^5.0.1",
+    "eslint": "^8.56.0",
+    "eslint-config-airbnb-base": "^15.0.0",
+    "eslint-import-resolver-webpack": "^0.13.10",
+    "eslint-plugin-import": "^2.32.0",
+    "eslint-plugin-vue": "^9.19.2",
     "eventsource-polyfill": "^0.9.6",
-    "express": "^4.16.3",
-    "extract-text-webpack-plugin": "^2.0.0",
-    "favicons-webpack-plugin": "^0.0.9",
-    "file-loader": "^1.1.11",
-    "friendly-errors-webpack-plugin": "^1.7.0",
+    "express": "^4.18.2",
+    "file-loader": "^6.2.0",
     "gulp": "^4.0.2",
     "gulp-concat": "^2.6.1",
-    "html-webpack-plugin": "^3.2.0",
-    "http-proxy-middleware": "^0.18.0",
+    "html-webpack-plugin": "^5.6.0",
+    "http-proxy-middleware": "^2.0.6",
     "identity-obj-proxy": "^3.0.0",
     "ignore-loader": "^0.1.2",
-    "jest": "^23.0.0",
+    "jest": "^29.7.0",
+    "jest-environment-jsdom": "^30.2.0",
     "jest-raw-loader": "^1.0.1",
-    "jest-serializer-vue": "^0.3.0",
-    "node-sass": "^4.0.0",
-    "npm-bump": "^0.0.23",
-    "offline-plugin": "^5.0.3",
-    "opn": "^4.0.2",
-    "optimize-css-assets-webpack-plugin": "^1.3.2",
-    "ora": "^1.2.0",
-    "raw-loader": "^0.5.1",
-    "replace-in-file": "^4.1.0",
-    "rimraf": "^2.6.0",
-    "sass-loader": "^7.0.1",
-    "semver": "^5.5.0",
-    "shelljs": "^0.8.1",
-    "string-replace-loader": "^2.1.1",
-    "stylelint": "^9.2.0",
-    "stylelint-config-standard": "^16.0.0",
-    "stylelint-processor-html": "^1.0.0",
-    "stylelint-webpack-plugin": "^0.10.4",
-    "url-loader": "^1.0.1",
-    "vue-jest": "^1.0.2",
-    "vue-loader": "^15.0.9",
-    "vue-style-loader": "^4.1.0",
-    "vue-template-compiler": "^2.5.16",
-    "webpack": "^2.6.1",
-    "webpack-bundle-analyzer": "^3.3.2",
-    "webpack-dev-middleware": "^1.10.0",
-    "webpack-hot-middleware": "^2.18.0",
-    "webpack-merge": "^4.1.2",
-    "webpack-pwa-manifest": "^3.7.1",
-    "worker-loader": "^1.1.1"
+    "jest-serializer-vue": "^3.1.0",
+    "mini-css-extract-plugin": "^2.7.6",
+    "offline-plugin": "^5.0.7",
+    "open": "^8.4.2",
+    "ora": "^5.4.1",
+    "postcss-loader": "^7.3.3",
+    "raw-loader": "^4.0.2",
+    "replace-in-file": "^7.0.2",
+    "rimraf": "^5.0.5",
+    "sass": "^1.69.5",
+    "sass-loader": "^13.3.2",
+    "semver": "^7.5.4",
+    "shelljs": "^0.8.5",
+    "string-replace-loader": "^3.1.0",
+    "stylelint": "^15.11.0",
+    "stylelint-config-standard-scss": "^11.1.0",
+    "terser-webpack-plugin": "^5.3.9",
+    "url-loader": "^4.1.1",
+    "vue-loader": "^15.11.1",
+    "vue-style-loader": "^4.1.3",
+    "vue-template-compiler": "^2.7.16",
+    "webpack": "^5.89.0",
+    "webpack-bundle-analyzer": "^4.10.1",
+    "webpack-cli": "^5.1.4",
+    "webpack-dev-middleware": "^6.1.1",
+    "webpack-hot-middleware": "^2.25.4",
+    "webpack-merge": "^5.10.0",
+    "workbox-precaching": "^7.0.0",
+    "workbox-routing": "^7.0.0",
+    "workbox-strategies": "^7.0.0",
+    "workbox-webpack-plugin": "^7.0.0",
+    "worker-loader": "^3.0.8"
   },
   "engines": {
-    "node": ">= 8.0.0",
-    "npm": ">= 5.0.0"
+    "node": ">= 18.0.0",
+    "npm": ">= 9.0.0"
   },
   "browserslist": [
     "> 1%",
     "last 2 versions",
-    "not ie <= 10"
+    "not dead"
   ]
 }
