feat: Implement resizable layout panels and update AI daemon providers with new Gemini and renamed OpenAI models.

--- a/ai-daemon/.env.example
+++ b/ai-daemon/.env.example
@@ -17,5 +17,5 @@ GEMINI_CLI_PATH=
 
 # Model overrides (optional)
 CLAUDE_MODEL=claude-opus-4-5-20251101
-CODEX_MODEL=gpt-5.1-codex-max
-GEMINI_MODEL=gemini-3-pro
+CODEX_MODEL=gpt-5-codex
+GEMINI_MODEL=gemini-3-pro-preview
