feat: Add Composer provider, implement Cursor provider, and rename X.AI to Z.AI.

--- a/ai-daemon/.env.example
+++ b/ai-daemon/.env.example
@@ -19,3 +19,16 @@ GEMINI_CLI_PATH=
 CLAUDE_MODEL=claude-opus-4-5-20251101
 CODEX_MODEL=gpt-5-codex
 GEMINI_MODEL=gemini-3-pro-preview
+
+# Z.AI (Chinese AI company - glm models)
+ZAI_API_KEY=
+ZAI_MODEL=glm-4.6
+
+# Cursor subscription (runs both Grok and Composer via cursor-agent)
+# NOTE: This API key is tied to your Cursor subscription, not per-call billing
+CURSOR_CLI_PATH=cursor-agent
+CURSOR_API_KEY=your_cursor_api_key_here
+
+# Cursor Models
+CURSOR_MODEL=grok        # X.AI's Grok
+COMPOSER_MODEL=composer-1 # Cursor's Composer model
