--- a/src/data/defaults/defaultSettings.yml
+++ b/src/data/defaults/defaultSettings.yml
@@ -79,16 +79,16 @@ turndown:
 
 # GitHub/GitLab commit messages
 git:
-  createFileMessage: '{{path}} created from https://stackedit.io/'
-  updateFileMessage: '{{path}} updated from https://stackedit.io/'
-  deleteFileMessage: '{{path}} deleted from https://stackedit.io/'
+  createFileMessage: '{{path}} created from https://stackedited.fladrycreative.com'
+  updateFileMessage: '{{path}} updated from https://stackedited.fladrycreative.com'
+  deleteFileMessage: '{{path}} deleted from https://stackedited.fladrycreative.com'
 
 # Default content for new files
 newFileContent: |
 
 
 
-  > Written with [StackEdit](https://stackedit.io/).
+  > Written with [stackediTED.](https://stackedited.fladrycreative.com)
 
 # Default properties for new files
 newFileProperties: |
